Remove dark mode

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -139,7 +139,7 @@
     color: #8b6fcb;
   }
 
-  @media (prefers-color-scheme: dark) {
+  /* @media (prefers-color-scheme: dark) {
     body {
       background-color: #333;
       color: #ddd;
@@ -181,7 +181,7 @@
     .helptext {
       color: #aaa;
     }
-  }
+  } */
 
 
 /* Background */ .bg { background-color: #f0f0f0; }
