Update rem, font-size

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -28,7 +28,6 @@
   a {
     color: #444;
     text-decoration: none;
-    font-weight: bold;
     /*color: #ff5e6c;*/
   }
 
@@ -132,12 +131,17 @@
   }
 
   ul.blog-posts li span {
-    flex: 0 0 130px;
+    flex: 0 0 6.5rem;
+  }
+
+  ul.blog-posts li time {
+    color: #8e8d8d;
   }
 
   ul.blog-posts li a:visited {
     color: #8b6fcb;
   }
+
 
   /* @media (prefers-color-scheme: dark) {
     body {
