--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -57,6 +57,10 @@
     line-height: 1.6;
   }
 
+  post-content a {
+    box-shadow: inset 0 -2px #444;
+  }
+
   main content p a {
     word-wrap: break-word;
     border: none;
